# aoba

./: .gitattributes  .gitignore  ACTION_ITEMS_FROM_FEEDBACK.md  CI_SETUP.md  CLAUDE.md  Cargo.toml  Cross.toml  DRILLDOWN_MODE_PLAN.md  Dockerfile.base  FINAL_STATUS.md  IPC_IMPLEMENTATION_SUMMARY.md  MULTI_STATION_FINAL_STATUS.md  MULTI_STATION_PROGRESS.md  MULTI_STATION_SCREENSHOT_REGENERATION.md  MULTI_STATION_TESTS_SUMMARY.md  PLAN.md  PORT_FORWARDING_FEATURE_SUMMARY.md  PYTHON_IMPLEMENTATION_SUMMARY.md  README.md  README_zh.md  REFACTORING_STATUS.md  REFACTORING_SUMMARY.md  STATE_MANAGER.md  TUI_E2E_FIXES.md  TUI_SLAVE_IPC_FIX.md  WORKFLOW_COMPLETION_GUIDE.md  WORKFLOW_COMPLETION_TECHNICAL_GUIDE.md  WORKFLOW_CORRECTIONS_NEEDED.md  build.rs  ci_test.sh  justfile  test_merge.rs
examples/api_master/: Cargo.toml  README.md
examples/api_master/src/: main.rs
examples/ci_utils/: Cargo.toml
examples/ci_utils/src/: auto_cursor.rs  data.rs  helpers.rs  key_input.rs  lib.rs  log_parser.rs  log_utils.rs  ports.rs  snapshot.rs  status_monitor.rs  terminal.rs  tui.rs  utils.rs  verify.rs
examples/cli_e2e/: Cargo.toml  main.rs  utils.rs
examples/cli_e2e/scripts/: README.md  aoba.pyi  py.typed  test_dynamic.py  test_embedded.py  test_multi_station.py  test_simple.py  test_with_types.py
examples/cli_e2e/src/: config_mode.rs  help.rs  list_ports.rs  list_ports_json.rs  list_ports_status.rs  main.rs  modbus_cli.rs  modbus_e2e.rs  port_occupation.rs  utils.rs
examples/cli_e2e/src/e2e/: mod.rs
examples/cli_e2e/src/e2e/api/: mod.rs  test_api_master_cli_slave.rs  test_api_slave_cli_master.rs
examples/cli_e2e/src/e2e/basic/: basic_master_slave.rs  data_source_http.rs  data_source_ipc.rs  data_source_ipc_channel.rs  data_source_manual.rs  data_source_mqtt.rs  data_source_python.rs  data_source_virtual_port.rs  mod.rs
examples/cli_e2e/src/e2e/multi_masters/: basic.rs  mod.rs  same_station.rs
examples/cli_e2e/src/e2e/multi_slaves/: adjacent_registers.rs  basic.rs  mod.rs  same_station.rs
examples/cli_e2e/src/e2e/multi_station/: mod.rs  two_stations.rs
examples/cli_e2e/src/e2e/single_station/: mod.rs  register_modes.rs
examples/cli_e2e/src/e2e/write/: mod.rs  write_coils.rs  write_holding.rs
examples/cli_e2e/tests/: config_mode.rs  help.rs  list_ports.rs  list_ports_json.rs  list_ports_status.rs  mod.rs  modbus_cli.rs  modbus_continuous.rs  modbus_e2e.rs
examples/cli_e2e/tests/e2e/basic/: basic_master_slave.rs  mod.rs
examples/cli_e2e/tests/e2e/multi_masters/: basic.rs  same_station.rs
examples/cli_e2e/tests/e2e/multi_slaves/: adjacent_registers.rs  basic.rs  same_station.rs
examples/tui_e2e/: Cargo.toml  IMPLEMENTATION_STATUS.md  IPC_ARCHITECTURE.md  MIGRATION_GUIDE.md  QUICK_REFERENCE.md  README.md  REFACTORING_GUIDE.md  SCREENSHOT_INTEGRATION_PLAN.md  TEST_FRAMEWORK_SUMMARY.md  WORKFLOW_NAVIGATION_FIX.md  main.rs  utils.rs
examples/tui_e2e/screenshots/multi_station/master_modes/: mixed_ids.json  mixed_types.json  spaced_addresses.json
examples/tui_e2e/screenshots/multi_station/slave_modes/: mixed_ids.json  mixed_types.json  spaced_addresses.json
examples/tui_e2e/screenshots/single_station/master_modes/: coils.json  discrete_inputs.json  holding.json  holding_registers.json  input.json  input_registers.json
examples/tui_e2e/screenshots/single_station/slave_modes/: coils.json  discrete_inputs.json  holding.json  holding_registers.json  input.json  input_registers.json
examples/tui_e2e/screenshots/tui_slave_coils/default/: 000.txt
examples/tui_e2e/src/: basic_master.rs  basic_slave.rs  basic_slave_refactored.rs  cli_port_cleanup.rs  executor.rs  ipc.rs  lib.rs  main.rs  mock_state.rs  parser.rs  placeholder.rs  renderer.rs  retry_state_machine.rs  test_snapshot_json.rs  utils.rs  workflow.rs
examples/tui_e2e/src/e2e/: basic_master.rs  basic_slave.rs  common.rs  mod.rs  multi_master.rs
examples/tui_e2e/src/e2e/common/: config.rs  execution.rs  mod.rs  navigation.rs  retry.rs  screenshot_integration.rs  state_helpers.rs  state_updaters.rs  station.rs  status_paths.rs  test_execution.rs  validation.rs
examples/tui_e2e/src/e2e/multi_masters/: basic.rs  different_registers.rs  mod.rs  same_station.rs
examples/tui_e2e/src/e2e/multi_slaves/: adjacent_registers.rs  basic.rs  mod.rs  same_station.rs
examples/tui_e2e/src/e2e/multi_station/: master_modes.rs  mod.rs  slave_modes.rs
examples/tui_e2e/src/e2e/single_station/: master_modes.rs  mod.rs  slave_modes.rs
examples/tui_e2e/tests/: cli_port_cleanup.rs  hybrid_tests.rs  mod.rs  multiple_masters_slaves.rs  tui_master.rs  tui_masters.rs  tui_slave.rs  tui_slaves.rs
examples/tui_e2e/tests/e2e/multi_masters/: basic.rs  (+2 more)
examples/tui_e2e/workflow/data_source/: http_server.toml  ipc_pipe.toml  mqtt_client.toml  port_forwarding.toml  port_forwarding.toml.old  python_data_source.py  python_script.toml  virtual_port_http_master.toml  virtual_port_ipc_master.toml  virtual_port_slave.toml
examples/tui_e2e/workflow/ipc_test/: basic.toml
examples/tui_e2e/workflow/write_single_station/: coils.toml  holding.toml
examples/tui_e2e_tests/: Cargo.toml  REWRITE_PLAN.md
examples/tui_e2e_tests/scripts/: README.md  socat_init.sh  socat_reset.sh
examples/tui_e2e_tests/src/: main.rs  main.rs.backup  test1_main.rs  test2_main.rs
examples/tui_e2e_tests/src/tests/: deadlock_test.rs  key_input.rs  mod.rs  modbus_master_slave.rs  navigation.rs  port_list_scrolling.rs  serial_interaction.rs  startup_shutdown.rs
examples/tui_integration_tests/: Cargo.toml
examples/tui_integration_tests/src/: main.rs
examples/tui_integration_tests/src/tests/: deadlock_test.rs  mod.rs  modbus_master_slave.rs  navigation.rs  port_list_scrolling.rs  serial_interaction.rs  startup_shutdown.rs
examples/tui_multiple_e2e/: Cargo.toml  README.md  main.rs
examples/tui_multiple_e2e/tests/: mod.rs  multiple_masters_slaves.rs
examples/tui_ui_e2e/: Cargo.toml  README.md
examples/tui_ui_e2e/screenshots/common/: multi_station_slave_base.txt
examples/tui_ui_e2e/src/: main.rs  ui_basic.rs
examples/tui_ui_e2e/src/e2e/: mod.rs
(+731 files in other folders)
