[package]
name = "aoba"
authors = ["langyo <langyo.china@gmail.com>"]
description = "Multi-protocol debug & simulation CLI tool (Modbus, MQTT, TTY, TCP/UDP, etc.)"
repository = "https://github.com/celestia-island/aoba"
license = "Apache-2.0"

version = "0.0.2"
edition = "2021"

[[bin]]
name = "aoba"
path = "src/main.rs"

[lib]
name = "aoba"
path = "src/lib.rs"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"

[workspace]
members = ["examples/*"]

[dependencies]
anyhow = { version = "^1", features = ["backtrace"] }
async-trait = "^0.1"
cfg-if = "^1"
derive_more = { version = "^2", features = ["full"] }
num_enum = "^0.7"
once_cell = "^1"
parking_lot = "^0.12"

base64 = "^0.22"
bytes = "^1"
chrono = { version = "^0.4", features = ["serde", "unstable-locales"] }
percent-encoding = "^2"
sqids = "^0.4"

serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
postcard = { version = "^1", features = ["alloc"] }
strum = { version = "^0.27", features = ["derive"] }
toml = "^0.9"
uuid = { version = "^1", features = [
  'v4',
  "v7",
  'fast-rng',
  'macro-diagnostics',
  'serde',
] }
yuuka = "^0.6"
rand = "^0.9"

clap = "^4"
env_logger = "^0.11"
log = "^0.4"
tracing = "^0.1"
tracing-appender = "^0.2"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }

flume = "^0.11"
tokio = { version = "^1", features = ["full"] }
futures = "^0.3"
oneshot = "^0.1"

whoami = "^1"
crossterm = "^0.29"

image = { version = "^0.25", features = ["gif", "jpeg", "png", "webp"] }
eframe = "^0.32"
egui = "^0.32"
ratatui = "^0.29"
unicode-width = "^0.2"

rmodbus = { version = "^0.11", features = ["with_serde"] }
libc = "^0.2"
serialport = "^4"
interprocess = "^2"

expectrl = "^0.8"
regex = "^1"
vt100 = "^0.15"
ctrlc = "^3"
[dev-dependencies]
# TUI testing dependencies
tokio-test = "^0.4"

[build-dependencies]
anyhow = " ^1"
serde_json = "^1"
toml = "^0.9"
semver = "^1"
