[package]
name = "aoba"
description.workspace = true
repository.workspace = true
license.workspace = true
license-file = "LICENSE"
authors.workspace = true
version.workspace = true
edition.workspace = true

build = "build.rs"
exclude.workspace = true

# Configuration for cargo-binstall
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }-v{ version }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

# Windows targets use zip format
[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"

[workspace]
members = [".", "examples/*"]
default-members = ["."]
resolver = "2"

[workspace.package]
authors = ["langyo <langyo.china@gmail.com>"]
description = "Multi-protocol debugging and simulation CLI/TUI tool for Modbus RTU."
repository = "https://github.com/celestia-island/aoba"
license = "SySL-1.0"
version = "0.2.0"
edition = "2021"
exclude = [
  "docs/**",
  "examples/**",
  "scripts/**",
  "res/mono-sc-nerd.ttf",
  ".trae/**",
  ".github/**",
  "CLAUDE.md",
]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"

[workspace.dependencies]

serde_json_path = "^0.7"

yuuka = "^0.6"

anyhow = { version = "^1", features = ["backtrace"] }
async-trait = "^0.1"
axum = "^0.8"
bytes = "^1"
cfg-if = "^1"
chrono = { version = "^0.4", features = ["serde", "unstable-locales"] }
clap = "^4"
crossterm = "^0.29"
ctrlc = "^3"
derive_more = { version = "^2", features = ["full"] }
env_logger = "^0.11"
expectrl = "^0.8"
flume = "^0.12"
futures = "^0.3"
interprocess = "^2"
libc = "^0.2"
log = "^0.4"
num_enum = "^0.7"
once_cell = "^1"
oneshot = "^0.1"
parking_lot = "^0.12"
postcard = { version = "^1", features = ["alloc"] }
rand = "^0.9"
ratatui = "^0.29"
regex = "^1"
rmodbus = { version = "^0.12", features = ["with_serde"] }
rumqttc = { version = "^0.25", default-features = false, features = [
  "use-rustls",
] }
semver = "^1"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serialport = { version = "^4", default-features = false }
strum = { version = "^0.27", features = ["derive"] }
thiserror = "^2"
tokio = { version = "^1", features = ["full"] }
tokio-serial = { version = "^5", default-features = false }
tokio-test = "^0.4"
toml = "^0.9"
tracing = "^0.1"
tracing-appender = "^0.2"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
unicode-width = "^0.2"
ureq = { version = "^3", features = [
  "json",
  "rustls",
], default-features = false }
url = "^2"
uuid = { version = "^1", features = [
  "v4",
  "v7",
  "fast-rng",
  "macro-diagnostics",
  "serde",
] }
vt100 = "^0.15"
whoami = "^1"
[dependencies]

anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
cfg-if.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
ctrlc.workspace = true
derive_more.workspace = true
env_logger.workspace = true
flume.workspace = true
futures.workspace = true
interprocess.workspace = true
libc.workspace = true
log.workspace = true
num_enum.workspace = true
once_cell.workspace = true
oneshot.workspace = true
parking_lot.workspace = true
postcard.workspace = true
rand.workspace = true
ratatui.workspace = true
rmodbus.workspace = true
rumqttc.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_path.workspace = true
serialport.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio-serial = { workspace = true, optional = true }
tokio.workspace = true
toml.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
unicode-width.workspace = true
ureq.workspace = true
url.workspace = true
uuid.workspace = true
whoami.workspace = true
yuuka.workspace = true
[features]
default = []
async-serial = ["dep:tokio-serial"]

[dev-dependencies]

tokio-test.workspace = true
[build-dependencies]

anyhow.workspace = true
semver.workspace = true
serde_json.workspace = true
toml.workspace = true
[target.'cfg(windows)'.dependencies]
windows = { version = "^0.62", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_Security",
  "Win32_System_Threading",
] }

# Force all rustls instances to use ring crypto provider
# This is required because rustls 0.23 defaults to aws-lc-rs which has build issues
[package.metadata.cargo-all-features]
denylist = ["aws-lc-rs"]
