[package]
name = "api_master"
description.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true

tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[dependencies._main]
path = "../.."
package = "aoba"
