[package]
name = "api_master"
description.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
_main = { path = "../..", package = "aoba" }
anyhow.workspace = true
env_logger.workspace = true
log.workspace = true
tokio = { workspace = true, features = ["full"] }
