[package]
name = "ci_utils"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
name = "ci_utils"
path = "src/lib.rs"

[dependencies]
anyhow = { version = "^1", features = ["backtrace"] }

env_logger = "^0.11"
log = "^0.4"

serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_json_path = "^0.7"
rand = "0.9"
regex = "^1"
chrono = { version = "^0.4", features = ["serde", "alloc"] }

aoba = { path = "../.." }

tokio = { version = "^1", features = ["rt-multi-thread", "macros", "time"] }
expectrl = "^0.8"

vt100 = "^0.15"
serialport = "^4"
