[package]
name = "cli_e2e"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true

clap = { workspace = true, features = ["derive"] }
env_logger.workspace = true
log.workspace = true

serde.workspace = true
serde_json.workspace = true

rand.workspace = true
regex.workspace = true
chrono = { workspace = true, features = ["serde", "alloc"] }

tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

expectrl.workspace = true

[target.'cfg(windows)'.dependencies]
serialport.workspace = true

[dependencies.aoba_cli]
path = "../../packages/cli"
