[package]
name = "cli_e2e"
description.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true

clap = { workspace = true, features = ["derive"] }
env_logger.workspace = true
log.workspace = true

serde.workspace = true
serde_json.workspace = true

rand.workspace = true
regex.workspace = true
chrono = { workspace = true, features = ["serde", "alloc"] }

tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

expectrl.workspace = true
tiny_http.workspace = true
ureq.workspace = true

[target.'cfg(windows)'.dependencies]
serialport.workspace = true

[dependencies.aoba]
path = "../.."
