[package]
name = "cli_e2e"
description.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
publish = false

[dependencies]

anyhow.workspace = true
chrono = { workspace = true, features = ["serde", "alloc"] }
clap = { workspace = true, features = ["derive"] }
env_logger.workspace = true
expectrl.workspace = true
interprocess.workspace = true
log.workspace = true
rand.workspace = true
regex.workspace = true
rumqttc.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
ureq.workspace = true
uuid.workspace = true
[target.'cfg(windows)'.dependencies]
serialport.workspace = true

[dependencies._main]
path = "../.."
package = "aoba"
