[package]
name = "tui_e2e"
description.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
parking_lot.workspace = true
once_cell.workspace = true

clap = { workspace = true, features = ["derive"] }
env_logger.workspace = true
log.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_json_path.workspace = true
toml.workspace = true

rand.workspace = true
regex.workspace = true
chrono.workspace = true

tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "net",
  "io-util",
  "process",
] }

ratatui.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "^0.28", default-features = false, features = ["fs"] }

[dependencies.aoba]
path = "../../packages/tui"

[dependencies.aoba_protocol]
path = "../../packages/protocol"

[dependencies.aoba_utils]
path = "../../packages/utils"
