[package]
name = "tui_e2e"
description.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
publish = false

[dependencies]

anyhow.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
env_logger.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
rand.workspace = true
ratatui.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_json_path.workspace = true
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "net",
  "io-util",
  "process",
] }
toml.workspace = true
[target.'cfg(unix)'.dependencies]
nix = { version = "^0.28", default-features = false, features = ["fs"] }

[dependencies._main]
path = "../.."
package = "aoba"
