[package]
name = "aoba_tui_e2e_tests"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "^1", features = ["backtrace"] }
tokio = { version = "^1", features = ["rt-multi-thread", "macros"] }
env_logger = "^0.11"
log = "^0.4"
expectrl = "^0.8"
regex = "^1"
crossterm = "^0.29"

[dependencies.aoba]
path = "../../"

[[bin]]
name = "tui_e2e_test1"
path = "src/test1_main.rs"

[[bin]]
name = "tui_e2e_test2"
path = "src/test2_main.rs"
